# PACE-2025

./: .gitattributes  .gitignore  Dockerfile  README.md  build.Dockerfile  builder.Dockerfile  dev.Dockerfile  docker-compose.yml  sujet2526.html  testall.sh
.github/workflows/: compile.yml  dockerized.yml
rapport/: doc.typ  sujet2526.html
real-instances/: COPIER_ICI_LES_INSTANCES.md
src/: CMakeLists.txt  Makefile  Readme.md  main.c  main.py  parser.c  utils.c
src/core/: main.c
src/core/solvers/: greedy.c  optimizer.c  periphery_greedy.c  perturbation.c  prune.c  solver.c  sorter.c  sparse_greedy.c  swap.c
src/core/struct/: covers.c  graph.c
src/core/utils/: logger.c  parser.c  time.c
src/includes/: covers.h  ds_finder.h  get_next_line.h  graph.h  libft.h  solver.h  types.h
src/libs/get_next_line/: get_next_line.c  get_next_line_utils.c
src/libs/gnl/: get_next_line.c
src/libs/libft/: Makefile  ft_atoi.c  ft_atoll.c  ft_atoull.c  ft_memcpy.c  ft_putchar_fd.c  ft_putnbr_fd.c
src/src/: main.c
src/src/core/: graph.c  solver.c
src/src/solvers/: greedy.c  kernelization.c  optimizer.c  solver.c
src/src/struct/: graph.c
src/src/utils/: parser.c
testset/: test.gr
visualizer/: gefx_converter.py  graph_visualizer.py
